Fixed wrapping issues and improved image quality

--- a/client/src/pages/ProfilePage/components/Biography/index.css
+++ b/client/src/pages/ProfilePage/components/Biography/index.css
@@ -3,6 +3,6 @@
 .body {
   color: var(--grey);
   margin-right: 20px;
-  word-wrap: break-word;
+  word-break: break-word;
   white-space: pre-wrap;
 }
