--- a/client/src/pages/ProfilePage/components/SpotifyPlaylists/index.css
+++ b/client/src/pages/ProfilePage/components/SpotifyPlaylists/index.css
@@ -26,8 +26,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: var(--almost-white);
-  text-shadow: -1px -1px var(--yellow), 1px -1px var(--yellow),
-    -1px 1px var(--teal), 1px 1px var(--teal);
+  text-shadow: -1px -1px var(--teal), 1px 1px var(--yellow);
   max-width: 80%;
+  text-align: center;
   word-wrap: break-word;
 }
